app/styles/buttons.less
.button {
  .transition;
  .radius;
  .letter-spacing;
  border: 1px solid transparent;

  &:focus,
  &:visited {
    outline: none;
  }

  &.is-disabled {
    opacity: .6;
    cursor: not-allowed;
  }

  span,
  i {
    margin-right: 6px;
  }
}

.button--default {
  background-color: @day-button;
  color: @day-paragraph;

  &:hover {
    background-color: darken(@day-button, 2%);
    color: @day-title;
  }
}

.button--action {
  background-color: @teal;
  border-color: @teal;
  color: @white;

  &:hover {
    background-color: lighten(@teal, 4%);
    color: @white;
  }

  &:focus {
    background-color: @teal;
  }
}

.button--trans {
  background: transparent;
  color: @grey;
  border-color: transparent;

  .fa,
  i {
    color: @grey;
    .transition;
  }

  &:hover,
  &:focus {
    color: @navy;
    background: transparent;

    .fa,
    i {
      color: @navy;
    }
  }
}

.icon-button {
  font-size: 14px;
  cursor: pointer;
  margin-left: 10px;
  .icon-hover;

  &:first-child {
    margin-left: inherit;
  }
}

.icon-button--lg {
  font-size: 15px;
}

.button-container {
  display: flex;
  justify-content: flex-start;
  align-content: center;

  .button,
  .square-button {
    margin-right: 10px;
  }
}

.button-container--right {
  justify-content: flex-end;

  .button,
  .square-button {
    margin-right: 0;
    margin-left: 10px;
  }
}

.button--twitch,
.button--yt,
.button--mixer {
  width: 48%;
}

.square-button {
  .radius;
  .transition;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50px;
  height: 50px;
  color: @white;
  font-size: 16px;
}

.square-button--twitch,
.button--twitch {
  background: #6441A4;

  &:hover {
    background: lighten(#6441A4, 4%);
  }

  &:focus {
    background: #6441A4;
  }
}

.square-button--yt,
.button--yt {
  background: #D22222;

  &:hover {
    background: lighten(#D22222, 4%);
  }

  &:focus {
    background: #D22222;
  }
}

.square-button--fb {
  background: #3B5998;

  &:hover {
    background: lighten(#3B5998, 4%);
  }
}

.square-button--twitter {
  background: #1DA1F2;

  &:hover {
    background: lighten(#1DA1F2, 4%)
  }
}

.button--soft-warning {
  color: @red;
  background: rgba(251,72,76,.16);

  &:focus {
    color: @red;
    background: rgba(251,72,76,.16);
  }

  &:hover {
    background: rgba(251,72,76,.2);
    color: @red;
  }
}

.square-button--mixer,
.button--mixer {
  background: #0078d7;

  &:hover {
    background: lighten(#0078d7,4%)
  }
}

.theme-toggle {
  &:focus {
    outline: 0;
  }
}

.night-theme {
  .button--default {
    background-color: @night-accent-light;
    border-color: @night-accent-light;
    color: @light-1;

    &:hover {
      color: @white;
    }
  }

  .button--trans {
    color: @night-link;
    background-color: transparent;
    border-color: transparent;

    &:hover {
      color: @white;
    }
  }

  .icon-button {
    .night-icon-hover();
  }
}

